--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -3,6 +3,7 @@
     height: 100vh;
     max-width: 100%;
     background-image: url('/assets/img/board.jpg');
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -53,4 +54,10 @@
 .player-position {
     position: absolute;
     right: 0;
+}
+
+.btn-add {
+    position: absolute;
+    right: 32px;
+    bottom: 32px;
 }
