updated to responsive version and added editable players

--- a/src/app/game-info/game-info.component.scss
+++ b/src/app/game-info/game-info.component.scss
@@ -5,3 +5,9 @@
 .mat-mdc-card {
     background-color: rgba($color: white, $alpha: 0.8);
 }
+
+mat-card {
+    @media (max-width: 720px) {
+        min-height: 120px;
+    }
+}
