--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,9 +1,15 @@
-<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 100 +(i*90)}" [playerActive]="i == game.currentPlayer" [name]="player" class="player-position"></app-player>
+<app-player (click)="editPlayer(i)" *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 50 +(i*70)}" [playerActive]="i == game.currentPlayer" [image]="game.player_images[i]" [name]="player" class="player-position hide-mobile"></app-player>
 
+<div class="scroll-container hide-desktop">
+    <app-player-mobile (click)="editPlayer(i)" *ngFor="let player of game.players; let i = index;" [playerActive]="i == game.currentPlayer" [image]="game.player_images[i]" [name]="player"></app-player-mobile>
+</div>
 
-<div class="field">
+<div *ngIf="gameOver" class="gameOver">
+    <img src="./assets/img/game_over.png" alt="">
+</div>
+
+<div *ngIf="!gameOver" class="field">
     <div class="card-stack">
-
         <!--Card stack-->
         <img *ngFor="let c of [0,1,2,3]; let i = index;" [ngStyle]="{'right.px': i*5}" src="assets/img/cards/card_cover.png" alt="">
         <img (click)="takeCard()" class="top-card" style="right: 25px" src="assets/img/cards/card_cover.png" alt="">
@@ -16,8 +22,8 @@
     </div>
 </div>
 
-<app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
+<app-game-info *ngIf="!gameOver" [card]="game.currentCard" class="pin-bottom"></app-game-info>
 
-<button mat-fab color="primary" (click)="openDialog()" class="btn-add">
+<button *ngIf="!gameOver" mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
   </button>
