--- a/src/app/player-mobile/player-mobile.component.scss
+++ b/src/app/player-mobile/player-mobile.component.scss
@@ -1,21 +1,20 @@
 .player {
     overflow: hidden;
-    width: 300px;
+    width: 100px;
     display: flex;
     align-items: center;
-    border-top-left-radius: 50px;
+    flex-direction: column;
     border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
     background-color: rgba(100, 100, 100, 0.8);
     span {
-        font-size: 24px;
-        margin-left: 14px;
-        text-overflow: ellipsis;
+        font-size: 14px;
         white-space: nowrap;
-        overflow: hidden;
     }
     img {
+        margin-top: 16px;
         height: 50px;
-        width: 50px;
+        width: 50x;
         object-fit: cover;
         border-radius: 100px;
     }
