--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -27,3 +27,6 @@
 <button *ngIf="!gameOver" mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
   </button>
+
+<!--preload Card-->
+<img class="preloadImage" src="assets/img/cards/{{ game.stack[game.stack.length -1] }}.png" alt="">
